# mcp-mantisbt

./: .gitignore  PLANNING.md  README.md  pyproject.toml
src/mcp_mantisbt/: client.py  models.py  server.py
